<resources>
    <string name="app_name">Parkinson-Dec19</string>
    <string name="back">Back</string>
    <string name="nextWord">Next</string>
    <string name="rewrite">Erase</string>
    <string name="change">Shuffle</string>
    <string name="loading">loading</string>
    <string name="start">Start</string>
    <string name="level">Level</string>
    <string name="wordCount">wordCount</string>
    <string name="writePoem">Start Writing!</string>
    <string name="gallery">Gallery</string>
</resources>
